@@ -9,4 +9,5 @@ Bug fixes
 -
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
-- 
+- metafactory's driven replay_profiles start by reinstalling the base profile
+- doctest doc/developer/metafactory.txt doesn't depend on python-ldap anymore.
